<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#003399">

    <Button
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:drawableLeft="@drawable/back"
        android:drawablePadding="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:text=""
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/card1"
        android:layout_width="280dp"
        android:layout_height="300dp"
        android:layout_below="@+id/backButton"
        android:layout_marginStart="55dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roundedplain"
        android:drawablePadding="10dp"
        android:fontFamily="@font/featherbold"
        android:padding="18dp"
        android:text=""
        android:textColor="#584E3D"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/select1"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_below="@id/backButton"
        android:layout_marginTop="70dp"
        android:layout_marginStart="70dp"
        android:fontFamily="@font/featherbold"
        android:text="@string/tablet" />

    <TextView
        android:id="@+id/select2"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_below="@id/backButton"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@id/select1"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/featherbold"
        android:text="@string/capsules" />

    <TextView
        android:id="@+id/select3"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_below="@id/backButton"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@id/select2"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/featherbold"
        android:text="@string/drops" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_below="@id/select1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:fontFamily="@font/featherbold"
        android:text="@string/reminder_times" />

    <Spinner
        android:id="@+id/reminderTimesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select1"
        android:layout_toEndOf="@id/text1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:entries="@array/reminder_times_array"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:layout_below="@id/text1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp"
        android:fontFamily="@font/featherbold"
        android:text="@string/dosage_per_day" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/text2"
        android:layout_marginTop="215dp"
        android:layout_marginStart="130dp"

        />

    <TextView
        android:id="@+id/text3"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_below="@id/text7"
        android:layout_marginTop="30dp"
        android:layout_marginStart="70dp"
        android:fontFamily="@font/featherbold"
        android:text="@string/timee"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignTop="@id/text7"
        android:layout_marginTop="50dp"
        android:layout_marginStart="160dp"
        android:fontFamily="@font/featherbold"
        android:text="@string/_00_00"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_alignTop="@id/text3"
        android:layout_marginTop="30dp"
        android:layout_marginStart="70dp"
        android:fontFamily="@font/featherbold"
        android:text="@string/set_a_datee"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_alignTop="@id/text3"
        android:layout_marginTop="30dp"
        android:layout_marginStart="160dp"
        android:fontFamily="@font/featherbold"
        android:text="@string/dd_mm_yy"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/featherbold"
        android:layout_below="@+id/text2"
        android:text="@string/alarm" />

    <Switch
        android:id="@+id/notificationsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="66dp"
        android:thumbTint="#1E1D1D"
        android:trackTint="#BF1919"
        android:layout_below="@+id/text1"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/proceed"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_below="@id/card1"
        android:layout_marginStart="150dp"
        android:text="@string/proceed"
        android:background="@drawable/btn"
        android:fontFamily="@font/featherbold" />

</RelativeLayout>
