<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/green_and_white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="26sp">

            <TextView
                android:id="@+id/nameofpill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pill_capsules"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantityofpill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2times"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100mg"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />



        </LinearLayout>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10:00 PM"

            android:textColor="@android:color/black"
            android:textSize="16sp" />



        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="dd/MM/yy"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
